--- a/base.css
+++ b/base.css
@@ -1,6 +1,9 @@
 :root {
     ---color-separation-1: #2b2a2a52;
     ---color-separation-2: #2a2c2f;
+
+    ---color-light-1: #d5e2ec;
+    ---color-light-2: #f1f8fd;
 }
 
 
@@ -24,9 +27,21 @@ main {
     margin: 1em 2em;
 }
 
+.center{
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+}
+
+th,
+td {
+    text-align: center;
+    vertical-align: middle;
+}
+
 header {
 
-    background-color: #d5e2ec;
+    background-color: var(---color-light-1);
     width: 100%;
     border-bottom: 1px solid var(---color-separation-2);
     padding: 1.7em 2em;
@@ -39,7 +54,7 @@ header h1 {
 }
 
 footer {
-    background-color: #d5e2ec;
+    background-color: var(---color-light-1);
     width: 100%;
     border-top: 1px solid var(---color-separation-2);
     padding: .7em;
