--- a/_css/form.css
+++ b/_css/form.css
@@ -34,7 +34,7 @@ header {
   background-color: #d5e2ec;
   width: 100%;
   border-bottom: 1px solid #2a2c2f;
-  padding: 1.7em 2em;
+  padding: 0.5em 1.5em;
   display: flex;
   align-items: center;
 }
@@ -53,6 +53,18 @@ footer {
 
 footer > p {
   margin: 1em 0;
+}
+
+.back-link {
+  border: solid 1px rgba(43, 42, 42, 0.3215686275);
+  display: inline-block;
+  padding: 0.3em 0.6em;
+  border-radius: 0.3em;
+  margin: 0 0 1em 1em;
+}
+
+.back-link a:hover {
+  text-decoration: none;
 }
 
 .col-d-1 {
