--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -40,7 +40,7 @@ header {
     background-color: $color-light-1;
     width: 100%;
     border-bottom: 1px solid $color-separation-2;
-    padding: 1.7em 2em;
+    padding: 0.5em 1.5em;
     display: flex;
     align-items: center;
 }
@@ -59,6 +59,18 @@ footer {
 
 footer > p {
     margin: 1em 0;
+}
+
+.back-link {
+    border: solid 1px $color-separation-1;
+    display: inline-block;
+    padding: 0.3em 0.6em;
+    border-radius: 0.3em;
+    margin: 0 0 1em 1em;
+}
+
+.back-link a:hover{
+    text-decoration: none;
 }
 
 @mixin coloums($media, $amount) {
