--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -7,7 +7,9 @@ $primary-shadow: #1c2850;
 $background-1: rgb(251, 253, 255);
 $background-2: rgb(228, 242, 255);
 
-
+table{
+    background-color: white;
+}
 
 body,
 html {
