--- a/_scss/index.scss
+++ b/_scss/index.scss
@@ -30,7 +30,7 @@ main .devs,
     background-color: white;
     border-radius: 10px;
     border: solid 1px $color-separation-1;
-    box-shadow: #00000044 0 2px 4px 0px;
+    box-shadow: rgba(0, 0, 0, 0.747) 0 2px 6px 0px;
 }
 
 div.division {
