--- a/_css/index.css
+++ b/_css/index.css
@@ -43,6 +43,7 @@ header {
   padding: 0.5em 1.5em;
   display: flex;
   align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.4745098039) 0 4px 6px 0px;
 }
 
 header h1 {
@@ -55,6 +56,7 @@ footer {
   border-top: 1px solid #2a2c2f;
   padding: 0.7em;
   text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.4745098039) 0 -4px 6px 0px;
 }
 
 footer > p {
@@ -186,7 +188,7 @@ main .devs,
   background-color: white;
   border-radius: 10px;
   border: solid 1px rgba(43, 42, 42, 0.3215686275);
-  box-shadow: rgba(0, 0, 0, 0.2666666667) 0 2px 4px 0px;
+  box-shadow: rgba(0, 0, 0, 0.747) 0 2px 6px 0px;
 }
 
 div.division {
