--- a/_scss/form.scss
+++ b/_scss/form.scss
@@ -1,6 +1,7 @@
 @import 'base';
 
 .cabecalho {
+    background-color: white;
     width: 360px;
     padding: 20px;
     border: 1px solid $color-separation-1;
