--- a/_css/index.css
+++ b/_css/index.css
@@ -4,7 +4,7 @@ table {
 
 body,
 html {
-  background-image: linear-gradient(rgb(251, 253, 255), rgb(228, 242, 255));
+  background-image: linear-gradient(rgb(255, 255, 255), rgb(227, 239, 243));
   padding: 0;
   margin: 0;
   width: 100%;
@@ -63,7 +63,16 @@ footer > p {
   margin: 1em 0;
 }
 
+footer > a {
+  color: white;
+}
+
+footer > a:hover {
+  color: rgb(227, 239, 243);
+}
+
 .back-link {
+  background-color: white;
   border: solid 1px rgba(43, 42, 42, 0.3215686275);
   display: inline-block;
   padding: 0.3em 0.6em;
@@ -235,5 +244,5 @@ footer > a {
 }
 
 footer > a:hover {
-  color: rgb(228, 242, 255);
+  color: rgb(227, 239, 243);
 }/*# sourceMappingURL=index.css.map */
