--- a/_css/index.css
+++ b/_css/index.css
@@ -1,3 +1,7 @@
+textarea {
+  height: 13em;
+}
+
 table {
   background-color: white;
 }
@@ -190,8 +194,9 @@ main {
 }
 
 main .devs,
-.projs,
-.alocs {
+main .projs,
+main .alocs,
+main .tasks {
   margin: 1em 0;
   padding: 1em;
   background-color: white;
