--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -7,6 +7,10 @@ $primary-shadow: #1c2850;
 $background-1: rgb(255, 255, 255);
 $background-2: rgb(227, 239, 243);
 
+textarea{
+    height: 13em;
+}
+
 table{
     background-color: white;
 }
